# adventofcode2024

./: .gitignore  LICENSE  adventofcode2024.cabal
day01/: Main.hs
day02/: Main.hs
day03/: Main.hs
day04/: Main.hs
day05/: Main.hs
day06/: Main.hs
day07/: Main.hs
day08/: Main.hs
day09/: Main.hs
day10/: Main.hs
day11/: Main.hs
day12/: Main.hs
day13/: Main.hs
day14/: Main.hs
day15/: Main.hs
